--- a/FowlerSite/Views/Games/Index.cshtml
+++ b/FowlerSite/Views/Games/Index.cshtml
@@ -10,8 +10,6 @@
     <div class="row">
         <div class="col-4">
 
-            <h1>Filters</h1>
-
             <!--
             START: Filter Sidebar
 
@@ -25,7 +23,7 @@
                     <form method="post" class="nk-form nk-form-style-1" novalidate="novalidate">
 
                         <!--Title filter-->
-                        <h4 class="nk-widget-title"><span><span class="text-main-1">Title</span></span></h4>
+                        <h4 class="nk-widget-title mt-0"><span><span class="text-main-1">Title</span></span></h4>
                         <div class="nk-widget-content">
                             <div id="title" class="input-group">
                                 <input name="name" type="text" class="form-control" placeholder="Type something...">
@@ -102,9 +100,9 @@
             </aside>
         </div>
 
-        <div class="col-8">
-            <h1>Games</h1>
-            <div class="IndexBody">
+        <div class="col-8 nk-feature-1">
+            <div class="nk-feature-cont mx-auto">
+                <h3 class="nk-decorated-h-2"><span class="text-main-1">Games</span></h3>
                 <p>
                     <a asp-action="Create">Create New</a>
                 </p>
