TF-31 Added temp ID data to user login so we can persistently keep people logged in

--- a/FowlerSite/Views/Login/Login.cshtml
+++ b/FowlerSite/Views/Login/Login.cshtml
@@ -46,7 +46,7 @@
         <div class="nk-gap-1"></div>
         <div class="row vertical-gap">
             <div class="col-4">
-                <button class="btn btn-outline-primary" type="submit">Login</button>
+                <button class="btn btn-outline-primary login-btn" type="submit">Login</button>
             </div>
             <div class="col-8">
                 <a class="btn btn-outline-secondary" asp-action="Create">Create an Account</a>
