--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -261,6 +261,7 @@
         <!-- GoodGames -->
         <script src="~/assets/js/goodgames.min.js"></script>
         <script src="~/assets/js/goodgames-init.js"></script>
+        <script src="~/assets/js/site.js"></script>
     </footer>
 
     <!-- START: Page Background -->
