TF-31 Small aesthetic changes to the create user page. The footer banner was overtaking half of the login form

--- a/FowlerSite/Views/Login/Create.cshtml
+++ b/FowlerSite/Views/Login/Create.cshtml
@@ -4,7 +4,20 @@
 <head>
     <link href="~/assets/css/login.css" rel="stylesheet" />
 </head>
-<body>
+<style type="text/css">
+    .error {
+        color: red;
+    }
+
+    .nk-page-background-bottom {
+        display: none;
+    }
+
+    footer {
+        display: none;
+    }
+</style>
+<body class="Create-User">
     <div class="flex-container">
         <div class="content-container">
                 <h4 class="mb-0"><span class="text-main-1">Create an Account</span></h4>
