--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -141,7 +141,7 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="nk-footer">
+    <footer class="nk-footer hide-me">
         <div class="container">
             <div class="nk-gap-3"></div>
             <div class="row vertical-gap">
