--- a/FowlerSite/Views/Login/Users/User.cshtml
+++ b/FowlerSite/Views/Login/Users/User.cshtml
@@ -26,7 +26,7 @@
 <table class="nk-table">
     <thead>
         <tr>
-            <th colspan="3">Payment Information</th>
+            <th colspan="4">Payment Information</th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +34,7 @@
             <th>Card Number</th>
             <th>Expiration</th>
             <th>CVC</th>
+            <th>Update</th>
         </tr>
         <tr>
             <td>@Model.CardNumber</td>
