TF-31 Transaction history is now linked to a cookie which will link the user to the order.

--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                                     <span class="fa fa-search"></span>
                                 </a>
                             </li>
-                            <li>
+                            <li class="login-icon">
                                 <a asp-controller="Login" asp-action="Login">
                                     <span class="fa fa-user"></span>
                                 </a>
