tf-49. Login link redirects to user page if there is an active login.

--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                                 </a>
                             </li>
                             <li class="login-icon">
-                                <a asp-controller="Login" asp-action="Login">
+                                <a asp-controller="Login" asp-action="DirectUser">
                                     <span class="fa fa-user"></span>
                                 </a>
                             </li>
